src/ImguiSdlSharp.Native/cimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef int ImGuiCond;           
typedef int ImGuiColorEditFlags;    
typedef int ImGuiPopupFlags;        
typedef int ImGuiSelectableFlags;   
typedef int ImGuiTreeNodeFlags;     
typedef int ImGuiWindowFlags;       
typedef unsigned int ImGuiID;      
IM_MSVC_RUNTIME_CHECKS_OFF
typedef struct ImVec2_t
{
    float x, y;
} ImVec2;
typedef struct ImVec4_t
{
    float x, y, z, w;
} ImVec4;
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count);  
CIMGUI_API bool ImGui_ComboCallbackEx(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_ColorPicker3(const char* label, float col[3], ImGuiColorEditFlags flags );
CIMGUI_API bool ImGui_ColorPicker4(const char* label, float col[4], ImGuiColorEditFlags flags , const float* ref_col );
CIMGUI_API bool ImGui_ColorButton(const char* desc_id, ImVec4 col, ImGuiColorEditFlags flags );                                      
CIMGUI_API bool ImGui_ColorButtonEx(const char* desc_id, ImVec4 col, ImGuiColorEditFlags flags , ImVec2 size );  
CIMGUI_API void ImGui_SetColorEditOptions(ImGuiColorEditFlags flags);                                                                         
CIMGUI_API bool  ImGui_TreeNode(const char* label);
CIMGUI_API bool  ImGui_TreeNodeStr(const char* str_id, const char* fmt, ...) IM_FMTARGS(2);                                        
CIMGUI_API bool  ImGui_TreeNodePtr(const void* ptr_id, const char* fmt, ...) IM_FMTARGS(2);                                        
CIMGUI_API bool  ImGui_TreeNodeV(const char* str_id, const char* fmt, va_list args) IM_FMTLIST(2);
CIMGUI_API bool  ImGui_TreeNodeVPtr(const void* ptr_id, const char* fmt, va_list args) IM_FMTLIST(2);
CIMGUI_API bool  ImGui_TreeNodeEx(const char* label, ImGuiTreeNodeFlags flags );
CIMGUI_API bool  ImGui_TreeNodeExStr(const char* str_id, ImGuiTreeNodeFlags flags, const char* fmt, ...) IM_FMTARGS(3);
CIMGUI_API bool  ImGui_TreeNodeExPtr(const void* ptr_id, ImGuiTreeNodeFlags flags, const char* fmt, ...) IM_FMTARGS(3);
CIMGUI_API bool  ImGui_TreeNodeExV(const char* str_id, ImGuiTreeNodeFlags flags, const char* fmt, va_list args) IM_FMTLIST(3);
CIMGUI_API bool  ImGui_TreeNodeExVPtr(const void* ptr_id, ImGuiTreeNodeFlags flags, const char* fmt, va_list args) IM_FMTLIST(3);
CIMGUI_API void  ImGui_TreePush(const char* str_id);                                                                               
CIMGUI_API void  ImGui_TreePushPtr(const void* ptr_id);                                                                            
CIMGUI_API void  ImGui_TreePop(void);                                                                                              
CIMGUI_API float ImGui_GetTreeNodeToLabelSpacing(void);                                                                            
CIMGUI_API bool  ImGui_CollapsingHeader(const char* label, ImGuiTreeNodeFlags flags );                                    
CIMGUI_API bool  ImGui_CollapsingHeaderBoolPtr(const char* label, bool* p_visible, ImGuiTreeNodeFlags flags );            
CIMGUI_API void  ImGui_SetNextItemOpen(bool is_open, ImGuiCond cond );                                                    
CIMGUI_API bool ImGui_Selectable(const char* label);                                                                                                         
CIMGUI_API bool ImGui_SelectableEx(const char* label, bool selected , ImGuiSelectableFlags flags , ImVec2 size );  
CIMGUI_API bool ImGui_SelectableBoolPtr(const char* label, bool* p_selected, ImGuiSelectableFlags flags );                                          
CIMGUI_API bool ImGui_SelectableBoolPtrEx(const char* label, bool* p_selected, ImGuiSelectableFlags flags , ImVec2 size );      
CIMGUI_API bool ImGui_BeginListBox(const char* label, ImVec2 size );                                                         
CIMGUI_API void ImGui_EndListBox(void);                                                                                                          
CIMGUI_API bool ImGui_ListBox(const char* label, int* current_item, const char*const items[], int items_count, int height_in_items );
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count); 
CIMGUI_API bool ImGui_ListBoxCallbackEx(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLines(const char* label, const float* values, int values_count);                                                  
CIMGUI_API void ImGui_PlotLinesEx(const char* label, const float* values, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size , int stride );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogram(const char* label, const float* values, int values_count);                                              
CIMGUI_API void ImGui_PlotHistogramEx(const char* label, const float* values, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size , int stride );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API bool ImGui_BeginMenuBar(void);                                         
CIMGUI_API void ImGui_EndMenuBar(void);                                           
CIMGUI_API bool ImGui_BeginMainMenuBar(void);                                     
CIMGUI_API void ImGui_EndMainMenuBar(void);                                       
CIMGUI_API bool ImGui_BeginMenu(const char* label);                               
CIMGUI_API bool ImGui_BeginMenuEx(const char* label, bool enabled );  
CIMGUI_API void ImGui_EndMenu(void);                                              
CIMGUI_API bool ImGui_MenuItem(const char* label);                                
CIMGUI_API bool ImGui_MenuItemEx(const char* label, const char* shortcut , bool selected , bool enabled ); 
CIMGUI_API bool ImGui_MenuItemBoolPtr(const char* label, const char* shortcut, bool* p_selected, bool enabled ); 
CIMGUI_API void ImGui_BeginTooltip(void);                                        
CIMGUI_API void ImGui_EndTooltip(void);
CIMGUI_API void ImGui_SetTooltip(const char* fmt, ...) IM_FMTARGS(1);            
CIMGUI_API void ImGui_SetTooltipV(const char* fmt, va_list args) IM_FMTLIST(1);
CIMGUI_API bool ImGui_BeginPopup(const char* str_id, ImGuiWindowFlags flags );                                
CIMGUI_API bool ImGui_BeginPopupModal(const char* name, bool* p_open , ImGuiWindowFlags flags );  
CIMGUI_API void ImGui_EndPopup(void);                                                                                  
CIMGUI_API void ImGui_OpenPopup(const char* str_id, ImGuiPopupFlags popup_flags );                          
CIMGUI_API void ImGui_OpenPopupID(ImGuiID id, ImGuiPopupFlags popup_flags );                                
CIMGUI_API void ImGui_OpenPopupOnItemClick(const char* str_id , ImGuiPopupFlags popup_flags );  